# gacs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: args.rs  help.txt  lib.rs  main.rs  seed.rs
