[package]
name = "gacs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = ["derive", "help", "std"] }
sha2 = { version = "0.11.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true
