[package]
name = "gacs"
version = "0.3.0"
edition = "2024"

[dependencies]
hex = { version = "0.4.3" }
sha2 = { version = "0.11.0", default-features = false }
thiserror = { version = "2.0.18", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true
